<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addstudent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@android:color/darker_gray"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:src="@drawable/gdg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv1"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv2"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/et1"
                android:id="@+id/name"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/tv3" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <EditText
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:hint="@string/et1"
                android:id="@+id/email"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv4"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/et1"
                android:id="@+id/DOB"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv5"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb2"
                    android:textSize="20sp"
                    android:id="@+id/female"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb1"
                    android:textSize="20sp"
                    android:id="@+id/male"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/rb3"
                    android:id="@+id/other"/>
            </RadioGroup>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv7"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/et1"
                android:id="@+id/mark10"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv6"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/et1"
                android:id="@+id/mark12"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv8"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv9"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/et1"
                android:id="@+id/mobile"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:id="@+id/button"
                android:textAlignment="center"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>