<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="200dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:foregroundGravity="center">

        <TextView
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="40sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <Button

            android:id="@+id/addStud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/btn1"
            android:textSize="20sp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <Button

            android:id="@+id/viewStud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/btn2"
            android:textSize="20sp"/>

    </LinearLayout>


</LinearLayout>
